--- a/react.html
+++ b/react.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>React Demo</title>
+    <link rel="stylesheet" href="https://unpkg.com/mocha@7.2.0/mocha.css">
     <style media="screen">
       .messageBox {
         border: 1px solid;
@@ -28,10 +29,15 @@
   <body>
 
     <main id="content"></main>
+    <!-- place for mocha to render its output-->
 
+    <div id="mocha"></div>
     <script src="https://unpkg.com/babel-standalone"></script>
     <script type="text/javascript" src="https://unpkg.com/react@16.7.0/umd/react.production.min.js"></script>
     <script type="text/javascript" src="https://unpkg.com/react-dom@16.7.0/umd/react-dom.production.min.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/chai@4.2.0/chai.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/mocha@7.2.0/mocha.js"></script>
+
 
     <script type="text/babel" data-presents="react">
 
@@ -69,7 +75,7 @@
           return ( // problem was lack of parenthesis
             <div>
               <label>Name: <input ref="nameInput" type="text" /></label>
-              <button onClick={this.buttonClicked}>Click me!</button>
+              <button id="inputButton" onClick={this.buttonClicked}>Click me!</button>
 
               <MessageBox type={msg.type} message={msg.body}/>
             </div> // send in ^^ type    and     ^^ this is message body
@@ -94,5 +100,56 @@
                   // ^^ ABOVE IS JSX, WRITING HTLM IN JS
                   // This is where constructors are called
     </script>
+
+    <script type="text/babel" data-presets="react">
+
+      const assert = chai.assert;
+
+      mocha.ui("bdd");
+      mocha.reporter("html");
+
+      describe("Example tests", () => {
+        it("Proved that math works", () => {
+          assert.equal(5, 3+2, "Math works!");
+          assert.notEqual(3+2, 6, "Math still works");
+          assert.closeTo(Math.PI, 3, .2, "PI is close to 3.");
+        });
+
+        it("Found our component", () => {
+            assert.isDefined(MessageBox, "Our MessageBox component is defined.");
+        });
+
+        it("Let us test a function", () => {
+          let myName = "Robin";
+          const greet = (name) => "Hello, " + name + "!";
+
+          assert.include(greet(myName), myName, "Greeting includes name.");
+        });
+        // btw, this () => things are "anonymous functions"
+      });
+
+// how to test react components
+
+
+      describe("Document tests", () => {  // this is an "anonymous function"
+        it("rendered an empty messageBox", () => {
+          let msgBox = document.querySelector(".messageBox");
+          assert.isDefined(msgBox, "Message box is in the document.");
+          assert.include(msgBox.classList.value, "hidden", "Message box is hidden");
+          assert.equal(msgBox.innerText, "", "Message box is empty.")
+        });
+
+        it("Rendered an error when name is empty", () => {
+          let msgBox = document.querySelector(".messageBox");
+          let button = document.querySelector("#inputButton") // you look for something with an ID using hash
+          button.click()
+          assert.include(msgBox.classList.value, "error", "Message box type is error");
+        })
+      })
+// takeaway - chai gives a way to assert that things are true; mocha lets us organize tests and run
+      mocha.run();
+// chai is just a library of asserts.  Now we want to run things and know if they passed
+    </script>
+
   </body>
 </html>
