--- a/index.html
+++ b/index.html
@@ -153,9 +153,13 @@
       </div>
     </div>
 
-    <script type="text/javacript" src="dist/bundle.js">
+    <!-- <script type="text/javacript" src="dist/bundle.js">
+
+    </script> -->
+    <script type="text/javascript" src="dist/bundle.js">
 
     </script>
 
   </body>
+
 </html>
