used react components on the page

--- a/index.html
+++ b/index.html
@@ -60,63 +60,7 @@
       </h2>
     </section>
 
-    <section class="section section--alignCentered section--description">
-
-<!--
-      <div class="section__exampleWrapper">
-        <div class="section__example">
-          <img alt="example screenshot of a project involving code"
-               class="section__exampleImage"
-               src="images/example1.png"/>
-          <dl class="color--cloud">
-            <dt class="section__exampleTitle section__text--centered">
-              Work Example
-            </dt>
-            <dd></dd>
-          </dl>
-        </div>
-      </div>
--->
-
-<!--
-      <div class="section__exampleWrapper">
-        <div class="section__example">
-          <img alt="example screenshot of a project involving chemistry"
-               class="section__exampleImage"
-               src="images/example2.png"/>
-<!-- what you can do to change an image is use commandline to do it . . .
-  cp /~desktop/screen shot . . . [space] images/example2.png
-          <!-- “Chemistry” by Surian Soosay is licensed under CC BY 2.0
-               https://www.flickr.com/photos/ssoosay/4097410999 -->
-
-<!--
-          <dl class="color--cloud">
-            <dt class="section__exampleTitle section__text--centered ">
-              Work Example
-            </dt>
-            <dd></dd>
-          </dl>
-        </div>
-      </div>
--->
-      <div class="section__exampleWrapper">
-        <div class="section__example">
-          <img alt="example screenshot of a project involving cats"
-               class="section__exampleImage"
-               src="images/myVacationProperty.jpeg"/>
-          <!-- “Bengal cat” by roberto shabs is licensed under CC BY 2.0
-               https://www.flickr.com/photos/37287295@N00/2540855181 -->
-
-
-          <dl class="color--cloud">
-            <dt class="section__exampleTitle section__text--centered">
-              Zoom
-            </dt>
-            <dd></dd>
-          </dl>
-        </div>
-      </div>
-    </section>
+    <div id="example-work"></div>
 
     <section class="background--skyBlue section">
       <h2 class="color--cloud margin--none section__text--centered">
@@ -129,7 +73,6 @@
         I am learning to code in the cloud! I like to work hard and learn new things.
         I want to work for a company that will pay me to code in the cloud!
       </p>
-
 
 
     <div class="background--skyBlue modal--closed">
