--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <span class="color--cloud modal__closeButton">
         <i class="fa fa-window-close-o"></i>
       </span>
-      <img alt="example screenshot of a project involving code"
+      <img alt="exxxample screenshot of a project involving code"
            class="modal__image"
            src="images/example1.png"/>
       <div class="color--cloud modal__text">
