--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <section class="background--skyBlue section">
       <h2 class="color--cloud margin--none section__text--centered">
-        MYYY VACATION PROPERTY IS BELOW
+        MY (FUTURE) VACATION PROPERTY IS BELOW
       </h2>
     </section>
 
