--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My Vacation Property Showcase</title>
+    <title>Future Vacation Property Showcase</title>
     <link rel="stylesheet" href="styles/main.css"/>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
@@ -15,7 +15,7 @@
     <main class="overflow--auto">
       <h1 class="color--skyBlue section__heading--largest">
         <!--Your name goes here -->
-        CLOUD GURU
+        JOHN CONKLE
       </h1>
 
       <ul class="section--social">
@@ -23,7 +23,7 @@
         <!--Links to relevant professional social media & resume -->
         <!-- See: http://fontawesome.io/icons/#brand for more -->
 <!-- fontawesome is wher emany of these resource s come from-->
-        <!-- Link to Linked In profile -->
+        <!-- Link to Linked In profile
         <li class="socialWrapper">
           <a class="color--skyBlue social"
              title="LinkedIn Profile"
@@ -31,26 +31,26 @@
              href="#">
             <i class="fa fa-linkedin"></i>
           </a>
-        </li>
+        </li>-->
 
         <!-- Link to GitHub profile -->
         <li class="socialWrapper color--skyBlue">
           <a class="social color--skyBlue"
              title="GitHub Profile"
              target="_blank"
-             href="#">
+             href="https://github.com/john-neil">
             <i class="fa fa-github"></i>
           </a>
         </li>
 
-        <!-- Link to resume, probably a .pdf -->
+        <!-- Link to resume, probably a .pdf
         <li class="socialWrapper">
           <a class="social color--skyBlue"
              title="Resume"
              href="#">
             <i class="fa fa-file-text"></i>
           </a>
-        </li>
+        </li>-->
       </ul>
     </main>
 
