--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <section class="section section--alignCentered section--description">
       <p class="color--darkgrey section__description">
         I am learning to code in the cloud! I like to work hard and learn new things.
-        I want to work for a company that will pay me to code in the cloud!
+        Which company will pay me to code in the cloud?
       </p>
 
 
@@ -88,7 +88,7 @@
         </h2>
         <a class="color--skyBlue modal__link"
            href="#">
-          Check it out
+          View the Property
         </a>
         <p class="modal__description">
           A long description of the work in question.
