--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <section class="background--skyBlue section">
       <h2 class="color--cloud margin--none section__text--centered">
-        MY (FUTURE) VACATION PROPERTY IS BELOW
+        ADMIRE THIS VACATION PROPERTY, BELOW
       </h2>
     </section>
 
@@ -71,7 +71,6 @@
     <section class="section section--alignCentered section--description">
       <p class="color--darkgrey section__description">
         I am learning to code in the cloud! I like to work hard and learn new things.
-        Which company will pay me to code in the cloud?
       </p>
 
 
