More wording tweaks

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <section class="background--skyBlue section">
       <h2 class="color--cloud margin--none section__text--centered">
-        ADMIRE THIS VACATION PROPERTY, BELOW
+        ADMIRE THIS VACATION PROPERTY, BELOW, THANKS TO REACT
       </h2>
     </section>
 
@@ -70,7 +70,7 @@
 
     <section class="section section--alignCentered section--description">
       <p class="color--darkgrey section__description">
-        I am learning to code in the cloud! I like to work hard and learn new things.
+        I am an avid consumer of Haribo Twin Snakes.  I love to work hard and learn new things, especially full-stack web development and automated testing (Continuous Integration/Continuous Deployment).
       </p>
 
 
